XWMM Change log

4.1.0
- Clean up jshint warnings (Issue #73)
- Remove unused code (Issue #68)
- Major clean up of the TV section
- Major clean up of the Movie section
- Restore view movies by genre
- Upgrade to ExtJS v3.4.1.1
- Use light gray theme
- Add media flags from the Confluence theme (Issue #26)

4.0.2
- XBMC expects rating to be a number not a string. (Issue #57)
- Fix the mark (un)watched in the TV section. (Issue #58)
- Fix typo in README.md - XWMM not X V MM (Issue #74)
- Remove the very broken files section (Issue #65)
- Remove the very broken actor section (Issue #66)
- Fix genre column not populated on movie view. (Issue #42)
- Add missing console functions to Internet Explorer. (Issue #70)
- Add debug code for API request failures. (Issue #71)

4.0.1
- Fix by criticalfiction
-- Allow UI to immediately reflect changes to sets after save
-- Fix mark as watched

4.0.0 - Gotham version open.

3.0.1
- Changes by fyfe
- Whitspace fixes
- Multicharactar support
- Fix typo in updateXBMCTables commit.
- Cleanup and improve updateXBMCSet, updateXBMCGenreMovie, GetMovieGenres.        
- Forgot to comment out debugging code in last commit (b1d59e2)         
- Small fix, getSelections() returns an array of records not values.         
- Fold setXBMCwatched and setXBMCunwatched into one function and clean up.         
- Allow new genres to be added. (Issue #4)        
- Show filename and directory when episode selected. (Issue #14)
- Fix-updateXBMCTables        
- Improvement-add-genres        
- Cleanup-save-watched         
- Fix-save-sets-genres         
- fix-tvshow-file-details

3.0.0a
- Slash, fixed movie set management (add, delete, rename)

3.0.0
- MokuJinJin and nwtn PR's
-- Some hack to get it working (not all features) with Frodo (XBMC v12) -- thanks to MokuJinJin
-- Unable to load tvshow, because of a little bug, just check undefined var -- thanks to MokuJinJin
-- Allow creation of new set in Movie>Other details -- thanks to nwtn